--- a/app/src/main/res/layout/activity_main9.xml
+++ b/app/src/main/res/layout/activity_main9.xml
@@ -5,5 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Main9Activity">
-
+    <ListView
+        android:id="@+id/contents_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:scrollbars="vertical"
+        android:visibility="visible" >
+    </ListView>
 </android.support.constraint.ConstraintLayout>
